fix: rework some issues
